# klogger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README
.github/workflows/: ci.yml
include/klogger/: logger.h
src/: logger.cpp
tests/: CMakeLists.txt  test_logger.cpp
